After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694125 - appDisplay: Fix _ensureIconVisible()
appDisplay: Fix _ensureIconVisible()
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-02-18 21:23 UTC by Florian Müllner
Modified: 2013-02-18 21:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
scroll-view-fade: Fix [vh]fade_offset property getters (1.09 KB, patch)
2013-02-18 21:23 UTC, Florian Müllner
committed Details | Review
appDisplay: Fix _ensureIconVisible() (1.12 KB, patch)
2013-02-18 21:23 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2013-02-18 21:23:06 UTC
The fade effect used in the scroll view was changed a while ago, but we missed the required adjustments in appDisplay ...
Comment 1 Florian Müllner 2013-02-18 21:23:10 UTC
Created attachment 236666 [details] [review]
scroll-view-fade: Fix [vh]fade_offset property getters

The two were mixed up all along, and nobody noticed ...
Comment 2 Florian Müllner 2013-02-18 21:23:21 UTC
Created attachment 236667 [details] [review]
appDisplay: Fix _ensureIconVisible()

The fade effect was renamed a while ago, but we missed to update
the use in _ensureIconVisible().
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-02-18 21:25:33 UTC
Review of attachment 236666 [details] [review]:

hahahaha.

OK.
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-02-18 21:25:42 UTC
Review of attachment 236667 [details] [review]:

OK.
Comment 5 Florian Müllner 2013-02-18 21:45:26 UTC
Attachment 236666 [details] pushed as 5d27538 - scroll-view-fade: Fix [vh]fade_offset property getters
Attachment 236667 [details] pushed as 75885c3 - appDisplay: Fix _ensureIconVisible()