scroll-view-fade: Fix [vh]fade_offset property getters

The two were mixed up all along, and nobody noticed ...

https://bugzilla.gnome.org/show_bug.cgi?id=694125